--- a/client/styles/application.scss
+++ b/client/styles/application.scss
@@ -3,6 +3,7 @@ $secondaryColor: #123d57;
 $tertiaryColor: #1d6a92;
 $quarternaryColor: #2b9fc9;
 $quinaryColor: #2bcac8;
+$zurauOrange: #d16c0e;
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
@@ -38,6 +39,7 @@ html {
     width: 100%;
     height: 100%;
     min-height: 700px;
+    min-width: 1000px;
     overflow: hidden;
 
     a {
